# axum-server

./: .gitignore  Cargo.toml  example_output.md
migrations/: 20240101000000_create_users_table.sql  20240109000001_add_user_profile.sql  20240109000002_create_posts_table.sql
src/: main.rs
src/config/: database.rs  mod.rs
src/error/: mod.rs
src/handlers/: user.rs
src/models/: mod.rs  user.rs
src/routes/: mod.rs  user.rs
